Fixing weird cutoff error

--- a/app/assets/stylesheets/signup/_word_scroll.scss
+++ b/app/assets/stylesheets/signup/_word_scroll.scss
@@ -8,7 +8,7 @@
   #word-scroll {
     display: inline-block;
     margin-left: 5px;
-    height: 25px;
+    height: 30px;
     overflow: hidden;
     position: absolute;
     width: 140px;
